sark/tests/ui/body_macro_invalid.rs
fn main() {
    let _ = sark_gen::body!("{}");
    let _ = sark_gen::body!("{");
    let _ = sark_gen::body!("{named}");
}
